--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     crossorigin=""></script>
     
     <!-- API KEY -->
-    <script type="text/javascript" src="static/js/config.js"></script>
+    <!-- <script type="text/javascript" src="static/js/config.js"></script> -->
 
     <!-- JS code -->
     <script type="text/javascript" src="static/js/logic.js"></script>
