clean up dashboard

--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
 <body>
     <h1>NYC Public School Classification Dashboard</h1>
     <h5>Map of NYC Public Schools | Cohort Years 2001-2017</h5>
-    <p>Click on a location marker on the map below to see the name and location of NYC public school.</p>
+    <p>Click on a location marker on the map below to see the location and compiled statitics of NYC public schools. Please note that the information was compiled from years 2001 to 2017 but not all school provided data for all the years.</p>
 
     <!-- MAP div -->
     <div id="mapid"></div>
+
+    <p>*NEW DIRECTIONS SECONDARY SCHOOL and FOUNDATIONS ACADEMY not mapped.</p>
 
     <!-- Chart div -->
     <div class="row" id="dropdown">
